@@ -127,7 +127,7 @@ class Console {
 
         GremlinLoader.load()
 
-        // check for available plugins.  if they are in the "active" plugins strategies then "activate" them
+        // check for available plugins on the path and track them by plugin class name
         def activePlugins = Mediator.readPluginState()
         def pluginClass = mediator.useV3d3 ? org.apache.tinkerpop.gremlin.jsr223.GremlinPlugin : GremlinPlugin
         ServiceLoader.load(pluginClass, groovy.getInterp().getClassLoader()).each { plugin ->
@@ -141,14 +141,16 @@ class Console {
                 }
 
                 mediator.availablePlugins.put(plugin.class.name, pluggedIn)
-
-                if (activePlugins.contains(plugin.class.name)) {
-                    pluggedIn.activate()
-
-                    if (!io.quiet)
-                        io.out.println(Colorizer.render(Preferences.infoColor, "plugin activated: " + plugin.getName()))
-                }
             }
+        }
+
+        // if there are active plugins then initialize them in the order that they are listed
+        activePlugins.each { pluginName ->
+            def pluggedIn = mediator.availablePlugins[pluginName]
+            pluggedIn.activate()
+
+            if (!io.quiet)
+                io.out.println(Colorizer.render(Preferences.infoColor, "plugin activated: " + pluggedIn.getPlugin().getName()))
         }
 
         // remove any "uninstalled" plugins from plugin state as it means they were installed, activated, but not
